<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Hello World!" />

    <EditText
        android:id="@+id/et_operand_first"
        android:hint="Operand_first"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/et_operand_second"
        android:hint="Operand_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_operand_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

      <Button
          android:id="@+id/btn_div"
          android:text="Divide"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@id/et_operand_second"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>

      <Button
          android:id="@+id/btn_add"
          android:text="Apply"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@id/btn_div"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/btn_sub"
          android:text="Sub"
          android:rotation="180"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@id/btn_add"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>

      <Button
          android:id="@+id/btn_multiply"
          android:text="Multiply"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@id/btn_sub"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>


</LinearLayout>